[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/EnemyPanel.gd" type="Script" id=1]
[ext_resource path="res://Mini Scenes/BlackBack.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/Old-Parchment-Textures.jpg" type="Texture" id=3]
[ext_resource path="res://Fonts/Kayambang.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Art/white-book_38568.png" type="Texture" id=5]
[ext_resource path="res://Mini Scenes/Portrait.tscn" type="PackedScene" id=6]
[ext_resource path="res://Art/VS.png" type="Texture" id=7]
[ext_resource path="res://Mini Scenes/MatchTable.tscn" type="PackedScene" id=8]
[ext_resource path="res://Art/new-letter.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 4 )

[node name="EnemyPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2.0
margin_bottom = -2.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="BlackBack" parent="." instance=ExtResource( 2 )]

[node name="Background" type="NinePatchRect" parent="."]
margin_left = 93.0
margin_top = 61.7737
margin_right = 917.0
margin_bottom = 540.774
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 3 )

[node name="Points" type="Label" parent="."]
visible = false
margin_left = 151.0
margin_top = 124.0
margin_right = 305.0
margin_bottom = 215.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Points:
?"
align = 1

[node name="CloseButton" type="Button" parent="."]
visible = false
margin_left = 363.765
margin_top = 74.4469
margin_right = 543.765
margin_bottom = 134.447
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 2 )
text = "CLOSE"

[node name="InfoButton" type="Button" parent="."]
visible = false
margin_left = 518.037
margin_top = 74.447
margin_right = 693.037
margin_bottom = 134.447
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 2 )
text = "INFO"

[node name="ManualButton" type="Button" parent="."]
visible = false
margin_left = 669.757
margin_top = 74.447
margin_right = 739.757
margin_bottom = 137.447
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 2 )

[node name="TextureRect" type="TextureRect" parent="ManualButton"]
margin_left = 11.0
margin_top = 5.45404
margin_right = 523.0
margin_bottom = 517.454
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Relation" type="Label" parent="."]
visible = false
margin_left = 728.0
margin_top = 127.0
margin_right = 927.0
margin_bottom = 171.0
rect_scale = Vector2( 0.95, 0.95 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Unknown"
align = 1
valign = 1

[node name="RelationSub" type="Label" parent="."]
visible = false
margin_left = 738.616
margin_top = 164.599
margin_right = 1087.62
margin_bottom = 255.599
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Grolk's relation
towards:"
align = 1

[node name="OtherPortButton" type="Button" parent="."]
visible = false
margin_left = 760.036
margin_top = 217.0
margin_right = 894.036
margin_bottom = 365.0

[node name="OtherPort" parent="." instance=ExtResource( 6 )]
visible = false
margin_left = 758.121
margin_top = 214.051
margin_right = 1306.12
margin_bottom = 821.051
rect_scale = Vector2( 0.25, 0.25 )

[node name="VS" type="TextureRect" parent="."]
visible = false
margin_left = 727.186
margin_top = 275.624
margin_right = 791.186
margin_bottom = 339.624
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="MatchTable" parent="." instance=ExtResource( 8 )]
visible = false

[node name="PortraitButton" type="Button" parent="."]
visible = false
margin_left = 132.0
margin_top = 233.0
margin_right = 319.0
margin_bottom = 439.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" parent="." instance=ExtResource( 6 )]
visible = false
margin_left = 129.77
margin_top = 231.923
margin_right = 677.77
margin_bottom = 838.923
rect_scale = Vector2( 0.35, 0.35 )

[node name="Mention1" type="OptionButton" parent="."]
visible = false
margin_left = 394.108
margin_top = 383.346
margin_right = 625.108
margin_bottom = 412.346
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Phrase" type="OptionButton" parent="."]
visible = false
margin_left = 395.467
margin_top = 422.0
margin_right = 624.467
margin_bottom = 451.0

[node name="Mention2" type="OptionButton" parent="."]
visible = false
margin_left = 393.292
margin_top = 459.908
margin_right = 624.292
margin_bottom = 488.908
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SendButton" type="Button" parent="."]
visible = false
margin_left = 644.324
margin_top = 384.845
margin_right = 796.324
margin_bottom = 519.845
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 2 )
text = "SEND"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LetterButton" type="Button" parent="."]
visible = false
margin_left = 772.919
margin_top = 403.391
margin_right = 832.919
margin_bottom = 463.391
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="LetterButton"]
margin_left = 9.73047
margin_top = 9.53418
margin_right = 521.73
margin_bottom = 521.534
rect_scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="DiplomacyArea" type="Label" parent="."]
visible = false
margin_left = 487.0
margin_top = 497.0
margin_right = 818.0
margin_bottom = 588.0
rect_scale = Vector2( 0.9, 0.9 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Diplomacy Area
"
align = 1
[connection signal="button_up" from="CloseButton" to="." method="_on_CloseButton_button_up"]
[connection signal="button_up" from="InfoButton" to="." method="_on_InfoButton_button_up"]
[connection signal="button_up" from="ManualButton" to="." method="_on_ManualButton_button_up"]
[connection signal="button_up" from="OtherPortButton" to="." method="_on_OtherPortButton_button_up"]
[connection signal="button_up" from="PortraitButton" to="." method="_on_InfoButton_button_up"]
[connection signal="item_selected" from="Mention1" to="." method="item_selected"]
[connection signal="item_selected" from="Phrase" to="." method="item_selected"]
[connection signal="item_selected" from="Mention2" to="." method="item_selected"]
[connection signal="button_up" from="SendButton" to="." method="_on_SendButton_button_up"]
[connection signal="button_up" from="LetterButton" to="." method="_on_LetterButton_button_up"]
